# GitArchitect

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: .env.example  docker-compose.yml
docs/: DEPLOY.md  SDD.md  USAGE.md
plugins/html_site/: pyproject.toml
plugins/html_site/ca_plugin_html/: __init__.py  markdown.py  renderer.py
scripts/: hermes-tailnet.sh  tailnet-access.sh  tailnet-serve.sh
src/codebase_architect/: __init__.py
src/codebase_architect/agents/: __init__.py
src/codebase_architect/api/: __init__.py  app.py  dashboard.py  routes.py  schemas.py
src/codebase_architect/application/: __init__.py
src/codebase_architect/application/dto/: __init__.py
src/codebase_architect/application/pipeline/: __init__.py  scan_pipeline.py
src/codebase_architect/application/registries/: __init__.py  ai_registry.py  plugins.py  renderer_registry.py  source_resolver.py
src/codebase_architect/application/services/: __init__.py  scan_service.py  spec_service.py
src/codebase_architect/application/use_cases/: __init__.py  build_code_model.py  enrich_flows.py  generate_narrative.py  import_source.py
src/codebase_architect/cli/: __init__.py  main.py
src/codebase_architect/domain/: __init__.py
src/codebase_architect/domain/model/: __init__.py  ai.py  architecture.py  code.py  code_model.py  documentation.py  entrypoint.py  feature.py  finding.py  functional_spec.py  http_flow.py  module.py  narrative.py  reconciliation.py  scan_record.py  source.py  stack.py  workspace.py
src/codebase_architect/domain/ports/: __init__.py  ai_provider.py  analysis.py  documentation.py  narrative_cache.py  scan_store.py  secret_scanner.py  source_provider.py  spec_store.py
src/codebase_architect/domain/services/: __init__.py  api_match.py  architecture_inference.py  architecture_rules.py  call_graph.py  doc_strings.py  documentation_builder.py  entrypoints.py  features_static.py  http_flows.py  module_graph.py  reconcile.py  sequence_diagram.py  spec_document.py  tree_checksum.py
src/codebase_architect/infrastructure/: __init__.py
src/codebase_architect/infrastructure/ai_providers/: __init__.py  claude.py  cli_runner.py  gemini.py  null.py  openai_compatible.py
src/codebase_architect/infrastructure/cache/: __init__.py  file_narrative_cache.py
src/codebase_architect/infrastructure/detection/: __init__.py  language_detector.py  manifest_detector.py
src/codebase_architect/infrastructure/export/: __init__.py  folder_exporter.py  zip_archive.py
src/codebase_architect/infrastructure/parsing/: __init__.py  tree_sitter_parser.py
src/codebase_architect/infrastructure/persistence/: __init__.py  _codec.py  file_scan_store.py  file_spec_store.py
src/codebase_architect/infrastructure/rendering/: __init__.py  markdown_renderer.py
src/codebase_architect/infrastructure/security/: __init__.py  secret_scanner.py
src/codebase_architect/infrastructure/source_providers/: __init__.py  _common.py  folder.py  git_remote.py  local_git.py  targz.py  zip.py
src/codebase_architect/shared/: __init__.py  config.py  errors.py  ids.py  logging.py  redaction.py
src/codebase_architect/workers/: __init__.py
tests/: conftest.py
tests/architecture/: test_imports.py
tests/contract/: test_source_provider_contract.py
tests/unit/: test_ai_providers.py  test_api.py  test_api_match.py  test_architecture_and_entrypoints.py  test_architecture_rules.py  test_build_code_model.py  test_call_graph.py  test_cli.py  test_cli_runner_provider.py  test_cli_runner_tool.py  test_documentation.py  test_enrich_flows.py  test_features_static.py  test_generate_narrative.py  test_git_remote.py  test_html_plugin.py  test_import_source.py  test_language_detector.py  test_manifest_detector.py  test_module_graph.py  test_narrative_cache.py  test_plugins.py  test_reconcile.py  test_redaction.py  test_scan_pipeline.py  test_scan_store.py  test_secret_scanner.py  test_sequence_diagram.py  test_shared.py  test_source_resolver.py  test_spec_service.py  test_tree_sitter_parser.py  test_workspace_iter.py
tools/cli_runner/: README.md  __init__.py  com.gitarchitect.cli-runner.plist  main.py
