[project]
name = "codebase-architect"
version = "0.0.0"
description = "Autonomous agent that analyzes, plans and implements changes on any codebase. Not coupled to any Git hosting provider."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Codebase Architect" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    # Static parsing. Grammar packages ship precompiled wheels (no runtime
    # download), so analysis works in restricted/offline environments.
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-kotlin>=1.1",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-html>=0.23",
]

[project.optional-dependencies]
# Optional capabilities are intentionally NOT in the core dependency set.
# The core must run even when these are absent (see SDD: degradable capabilities).
ai = ["anthropic>=0.40"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
cli = ["typer>=0.12", "rich>=13.7"]
workers = ["arq>=0.25", "redis>=5.0"]
persistence = ["sqlalchemy>=2.0", "alembic>=1.13", "psycopg[binary]>=3.1"]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "import-linter>=2.0",
    "httpx>=0.27",
]

[project.scripts]
architect = "codebase_architect.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_architect"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["codebase_architect"]

[tool.ruff.lint.flake8-bugbear]
# Typer and FastAPI both call these in parameter defaults by design.
extend-immutable-calls = ["typer.Option", "typer.Argument", "fastapi.Depends"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["codebase_architect"]
mypy_path = "src"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Optional dependency (the 'ai' extra); imported lazily and may be absent.
module = ["anthropic"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/codebase_architect"]

# ---------------------------------------------------------------------------
# Architecture contracts (hexagonal): dependencies must point inwards.
# Enforced by import-linter in CI.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["codebase_architect"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Hexagonal layers point inwards"
type = "layers"
layers = [
    "codebase_architect.cli | codebase_architect.api | codebase_architect.workers",
    "codebase_architect.application",
    "codebase_architect.domain",
    "codebase_architect.shared",
]
# infrastructure, agents and plugins are checked by the independence/forbidden
# contracts below rather than as a single linear stack.

[[tool.importlinter.contracts]]
name = "Domain is pure (knows nothing outward)"
type = "forbidden"
source_modules = ["codebase_architect.domain"]
forbidden_modules = [
    "codebase_architect.application",
    "codebase_architect.infrastructure",
    "codebase_architect.api",
    "codebase_architect.cli",
    "codebase_architect.workers",
    "codebase_architect.agents",
    "codebase_architect.plugins",
]

[[tool.importlinter.contracts]]
name = "Core never imports plugins directly (only via registries)"
type = "forbidden"
source_modules = [
    "codebase_architect.domain",
    "codebase_architect.application",
    "codebase_architect.infrastructure",
    "codebase_architect.api",
    "codebase_architect.cli",
    "codebase_architect.workers",
    "codebase_architect.agents",
]
forbidden_modules = ["codebase_architect.plugins"]

[[tool.importlinter.contracts]]
name = "Core is not coupled to any Git hosting provider"
type = "forbidden"
source_modules = [
    "codebase_architect.domain",
    "codebase_architect.application",
    "codebase_architect.infrastructure",
    "codebase_architect.agents",
]
forbidden_modules = [
    "github",
    "gitlab",
    "atlassian",
]
